# mkdocs-hover-tooltip-popup

./: .codespellrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  _typos.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-to-pypi.yml
D2/: index.html
D2/D2imported/: index.html
D2/d2diagram/: index.html
Mermaid/: index.html
Mermaid/bigmermaid/: index.html
Mermaid/c4-native/: index.html
Mermaid/clickables/: index.html
Mermaid/custom-fonts/: index.html
Mermaid/disabled/: index.html
Mermaid/excluded/: index.html
Mermaid/links/: index.html
Mermaid/tooltips/: index.html
Mermaid/tooltips-complex/: index.html
SUMMARY/: index.html
Usage/: index.html
css/: mermaid.css
docs/: SUMMARY.md  Usage.md  index.md
docs/D2/: index.md
docs/Mermaid/: c4-native.md  clickables.md  custom-fonts.md  disabled.md  index.md  tooltips-complex.md  tooltips.md
docs/css/: diagram-colors.css  hide-root-section.css
docs/extra/js/: mermaid-init.js  refresh-on-toggle-dark-light.js
docs/images/: index.md
images/: index.html
images/largeimage/: index.html
mark-as-read/: pages-updated-at.json
mkdocs_hover_tooltip_popup/: __init__.py  box.py  html_page.py  plugin.py  tooltip_fence.py  yaml_parser.py
mkdocs_hover_tooltip_popup/custom/: hover-tooltip-popup.css  hover-tooltip-popup.js
mkdocs_hover_tooltip_popup/extras/: diagram-colors.css  mermaid-init.js
scripts/: build.sh  check.sh  clean.sh  contributor-setup.sh  env.sh  prek.sh  pypi-build.sh  pypi-publish-test.sh  pypi-publish.sh  serve.sh  test.sh  version-bump.sh
search/: search_index.json
tests/: __init__.py  test_box.py  test_exclude.py  test_hint_button_bug.py  test_hint_button_fix.py  test_html_page.py  test_plugin.py  test_tooltip_fence.py  test_yaml_parser.py
tests/e2e/: __init__.py  conftest.py  test_browser.py
