[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-hover-tooltip-popup"
version = "0.2.6"
description = "MkDocs plugin for per-node hover tooltip popups, plus pan & zoom, on Mermaid/D2 diagrams and images"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "elgalu", email = "elgalu3@gmail.com" },
  { name = "PLAYG0N", email = "playg0nofficial@gmail.com" },
]
keywords = ["mkdocs", "zoom", "pan", "plugin", "mermaid", "images"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
  "mkdocs>=1.6.1",
  "beautifulsoup4>=4.14.3",
  "mkdocs-literate-nav>=0.6.3",
  # Used at build time by the mermaid-tooltips fence formatter to parse the
  # tooltips block (a YAML list). Runtime dep because it runs in the user's env.
  "pymdown-extensions>=10.0",
  "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
  "awslambdaric>=4.0.0",
  "boto3>=1.43.14",
  "botocore>=1.43.14",
  "cfnresponse>=1.1.5",
  "mkdocs>=1.6.1",
  "mkdocs-git-authors-plugin>=0.10.0",
  "mkdocs-git-revision-date-localized-plugin>=1.5.2",
  "mkdocs-literate-nav>=0.6.3",
  "mkdocs-material>=9.7.6",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocs-hover-tooltip-popup",
  "mkdocs-d2-plugin>=1.7.0",
  "mkdocs-redirects>=1.2.3",
  "mkdocs-section-index>=0.3.12",
  "mkdocs-glightbox>=0.5.2",
  "mypy>=2.1.0",
  "pylint>=4.0.5",
  "pymdown-extensions>=10.21.3",
  "pyyaml>=6.0.3",
  "types-pyyaml>=6.0.12.20260518",
  "mkdocs-toggle-sidebar-plugin>=0.1.0",
  "mkdocs-material-mark-as-read>=0.0.1",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-playwright>=0.8.0",
  "playwright>=1.60.0",
  "types-markdown>=3.10.2.20260518",
]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.6", "mkdocs-d2-plugin>=1.7.0"]

[project.urls]
Homepage = "https://github.com/elgalu/mkdocs-hover-tooltip-popup"
Repository = "https://github.com/elgalu/mkdocs-hover-tooltip-popup.git"
Documentation = "https://elgalu.github.io/mkdocs-hover-tooltip-popup/"
Issues = "https://github.com/elgalu/mkdocs-hover-tooltip-popup/issues"

[project.entry-points."mkdocs.plugins"]
hover-tooltip-popup = "mkdocs_hover_tooltip_popup.plugin:HoverTooltipPopupPlugin"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_hover_tooltip_popup"]

[tool.uv]
system-certs = true

[tool.codespell]
skip = 'uv.lock'

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around operators
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line endings
line-ending = "auto"

[tool.ruff.lint]
# use ruff defaults: Flake8's F rules, along with a subset of the E rules, omitting any stylistic rules
# that overlap with the use of a formatter, like Black.
fixable = ["ALL"]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "S",    # flake8-bandit
  "PGH",  # pygrep-hooks
  "T100", # debug statements
  "W291", # trailing whitespace
  "W292", # no newline at end of file
  "D",    # pydocstyle - enable docstring checks
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "S101", # use of assert
  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "D203", # 1 blank line required before class docstring (conflicts with D211)
  "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
  "D417", # Missing argument descriptions in docstring - TODO: fix this later
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# E2E test methods are self-describing and grouped under documented classes;
# don't require a docstring on every short browser-interaction test.
"tests/e2e/test_*.py" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Temporarily disable strict typing for existing code
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Additional strict checks to match Pylance - disabled for now
disallow_any_generics = false
exclude = ["tests/.*"]

# Ignore missing imports for dependencies without type stubs
[[tool.mypy.overrides]]
module = ["mkdocs", "mkdocs.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "e2e: end-to-end tests that drive a real headless browser (Playwright/Chromium)",
]
addopts = [
  "-ra",
  "-q",
  "--strict-markers",
  "--strict-config",
  "--cov=mkdocs_hover_tooltip_popup",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]

[tool.coverage.run]
source = ["mkdocs_hover_tooltip_popup"]
omit = ["*/venv/*", "*/.venv/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
